Remove sunrise-sunset-js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label for="longitude">Longitude:</label>
         <input type="text" id="longitude" name="longitude" value="-112.5263">
         <label for="date">Date:</label>
-        <input type="date" id="date" name="date" value="">
+        <input type="date" id="date" name="date">
         <button type="submit">Calculate</button>
     </form>
     <div id="results">
@@ -23,7 +23,6 @@
         <p id="end_ntw"></p>
         <p id="rounded_end_ntw"></p>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/sunrise-sunset-js@1.1.1/lib/sunrise-sunset.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
