--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
     </form>
     <div id="results">
         <h2>Results:</h2>
-        <p id="sunset"></p>
-        <p id="end_ntw"></p>
-        <p id="rounded_end_ntw"></p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Sunset Time</th>
+                    <th>End of Nautical Twilight</th>
+                    <th>Nearest 15-min Increment Before End of Nautical Twilight</th>
+                </tr>
+            </thead>
+            <tbody id="results-body">
+                <!-- Results will be appended here -->
+            </tbody>
+        </table>
     </div>
     <script src="script.js"></script>
 </body>
