--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </tbody>
         </table>
     </div>
+    <footer>
+        Created by EricPostMaster | <a href="https://github.com/EricPostMaster/when_to_party" target="_blank">View on GitHub</a>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
