Add description and instructions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Nautical Twilight Calculator</h1>
+    <h1>When to Party?</h1>
+    <p>I volunteer with <a href="https://stellarvistaobservatory.org">Stellar Vista Observatory</a>, a nonprofit observatory based in Kanab, UT. We offer public and private night sky experiences throughout the year. One of the things I have found challenging is knowing when to start an event. If we start too early, the stars aren't out yet, and if we start too late, it can be hard to find each other in the dark, and we're all tired the next day!
+
+    This webpage is a simple solution: Just add your latitude and longitude and the date you want to have a star party, and this will tell you what time you should start your star party!</p>
+
+    <h2>How Does it Work?</h2>
+
+    <p>🕒 We start at the nearest 15-minute increment before the end of nautical twilight, which is just before astronomical twilight. That way, we can still find each other, but we don't have to stand around waiting for it to get dark.
+
+    🌐 The default latitude and longitude are for Kanab, but you can input your own.</p>
     <form id="coordinates-form">
         <label for="latitude">Latitude:</label>
         <input type="text" id="latitude" name="latitude" value="37.0475">
