Add time zone display note

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <p>🕒 We start at the nearest 15-minute increment before the end of nautical twilight, which is just before astronomical twilight. That way, we can still find each other, but we don't have to stand around waiting for it to get dark.</p>
 
     <p>🌐 The default latitude and longitude are for Kanab, but you can input your own.</p>
+
+    <p><strong>Note:</strong> The page displays the time in the time zone of your device.</p>
+    
     <form id="coordinates-form">
         <label for="latitude">Latitude:</label>
         <input type="text" id="latitude" name="latitude" value="37.0475">
