Add Moon phases! 🌒🌓🌔🌕🌖🌗🌘🌑

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                         <th>Sunset Time</th>
                         <th>End of Nautical Twilight</th>
                         <th>Recommended Start Time</th>
+                        <th>Moon Phase</th>
+                        <th>Moonrise / Moonset</th> 
                     </tr>
                 </thead>
                 <tbody id="results-body">
@@ -50,6 +52,7 @@
     <footer>
         Created by EricPostMaster | <a href="https://github.com/EricPostMaster/when_to_party" target="_blank">View on GitHub</a>
     </footer>
+    <script src="https://unpkg.com/suncalc@1.9.0/suncalc.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
